[package]
name = "disguise-tool"
version = "1.0.0"
description = "A desktop tool for discreet work breaks"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[package.metadata.bundle]
icon = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
